@@ -166,6 +166,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4524: distutils build_script command failed with --with-suffix=3.
+  Initial patch by Amaury Forgeot d'Arc.
+
 - Issue #2461: added tests for distutils.util
 
 - Issue #4998: The memory saving effect of __slots__ had been lost on Fractions
